# meta-pim

./: LICENSE  README.md  run_metapim.sh
polysat/: .env.template  .gitignore  Cargo.toml  README.md
polysat/examples/: cliff_demo.rs  explore_gemm_ncp_aware.rs  generate_gemm_64.rs  phase4_experiments.rs  phase5_correlation.rs
polysat/examples/demo/: gemm_64.c  polysat_opt_gemm_64.c
polysat/isl-rs/: Cargo.toml
polysat/isl-rs/src/bindings/: access_info.rs  aff.rs  aff_list.rs  ast_expr.rs  ast_expr_list.rs  ast_node.rs  ast_node_list.rs  basic_map.rs  basic_map_list.rs  basic_set.rs  basic_set_list.rs  cell.rs  constraint.rs  constraint_list.rs  ctx.rs  enums.rs  fixed_box.rs  flow.rs  id.rs  id_list.rs  id_to_ast_expr.rs  local_space.rs  map.rs  map_list.rs  mat.rs  (+47 more)
polysat/isl-rs/tests/: test_band_transformation.rs  test_realistic_transformations.rs
polysat/src/: access_analysis.rs  band_fusion.rs  codegen.rs  communication_cost.rs  dep_aware_extractor.rs  dep_aware_rules.rs  dependency_aware.rs  execution.rs  external_cost_estimator.rs  extract_access.rs  extract_all.rs  isl_block_printer.rs  isl_codegen_ffi.rs  isl_printer_ffi.rs  language.rs  lib.rs  main.rs  mlir_compiler.rs  mlir_cost_extractor.rs  optimize.rs  parse.rs  pipeline.rs  polygeist_import.rs  polymer_access_reader.rs  rational_rewrites.rs  schedule_explorer.rs  schedule_measurer.rs  schedule_properties.rs  schedule_serializer.rs  tile_per_dimension.rs  tile_separate_bands.rs  transformations.rs
polysat/tests/: codegen_viability.rs  cost_model_ranking.rs  equivalence.rs  search_integration.rs
(+22 files in other folders)
